Fixes on Person task